T008: refactor(auth-service) - improve code quality and simplify syntax